add base layout, add page-auth, add button

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,9 @@
-body {
-  box-sizing: border-box;
+@import "~antd/dist/antd.css";
+
+body,
+html,
+.wrapper,
+#root {
+  height: 100%;
+  color: #202020;
 }
