--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -19,6 +19,22 @@
       opacity: 0.5;
     }
   }
+
+  &__register-link {
+    text-align: center;
+    display: block;
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    color: #adadad;
+  }
+  .button {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.1px;
+    width: 100%;
+  }
+
   .block {
     width: 430px;
   }
