--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -27,6 +27,25 @@
     letter-spacing: 0.1px;
     color: #adadad;
   }
+
+  &__success-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    height: 400px;
+    svg {
+      width: 48px;
+      height: 48px;
+    }
+    h2 {
+      margin-top: 10px;
+    }
+    p {
+      color: #adadad;
+    }
+  }
   .button {
     text-transform: uppercase;
     font-weight: 500;
