add message attachments

--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -41,6 +41,19 @@
     line-height: 20px;
   }
 
+  &__attachments {
+    display: flex;
+    margin-bottom: 5px;
+    cursor: pointer;
+    &-item {
+      margin-right: 5px;
+      img {
+        width: 45px;
+        height: 45px;
+      }
+    }
+  }
+
   &__icon-readed {
     position: absolute;
     bottom: 25px;
