--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,7 @@ html,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+* {
+  outline: none;
+}
