--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -2,15 +2,24 @@
   display: flex;
   background-color: #fff;
   width: 1140px;
+  height: 100%;
   margin: 0 auto;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.04204);
 
   &__sidebar {
+    width: 320px;
+    border-right: 1px solid #f7f7f7;
+
     &-header {
       display: flex;
       justify-content: space-between;
-      padding: 20px;
+      padding: 21px;
+      height: 58px;
+      border-bottom: 1px solid #f7f7f7;
+      margin-bottom: 20px;
+      align-items: center;
     }
+
     &-search {
       padding: 0 20px 20px 20px;
 
@@ -18,7 +27,24 @@
         background-color: #f7f8f9;
       }
     }
-    width: 320px;
+
+    &-dialogs {
+      height: calc(100% - 136px);
+
+      .dialogs {
+        height: 100%;
+        overflow: auto;
+        &__item {
+          padding: 10px 20px;
+          margin-bottom: 0;
+          &.active,
+          &:hover {
+            background-color: #f3f7ff;
+            cursor: pointer;
+          }
+        }
+      }
+    }
   }
 
   &__dialog {
