add layout chat header

--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -49,5 +49,46 @@
 
   &__dialog {
     flex: 1;
+
+    &-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px;
+      border-bottom: 1px solid #f7f7f7;
+
+      &-center {
+        text-align: center;
+
+        .status {
+          display: inline-block;
+          color: #bfbfbf;
+          position: relative;
+
+          &--online {
+            &::before {
+              background-color: #00c980;
+            }
+          }
+          &::before {
+            display: block;
+            position: absolute;
+            top: 8px;
+            left: -9px;
+            content: "";
+            width: 6px;
+            height: 6px;
+            border-radius: 30px;
+            background-color: #d3d3d3;
+          }
+        }
+      }
+    }
+
+    &-username {
+      font-weight: 500;
+      margin-bottom: 5px;
+      display: block;
+    }
   }
 }
