--- a/src/components/Dialogs/Dialogs.scss
+++ b/src/components/Dialogs/Dialogs.scss
@@ -1,6 +1,15 @@
 @import "~styles/variables";
 
 .dialogs {
+  &__search {
+    padding: 2px 20px 20px 20px;
+
+    .input {
+      background-color: #f7f8f9;
+      padding-left: 10px;
+    }
+  }
+
   &__item {
     $item: &;
 
