--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,3 +21,18 @@ html,
 * {
   outline: none;
 }
+
+.ant-btn-circle {
+  border: 0;
+  box-shadow: none;
+  color: #202020 !important;
+  opacity: 0.4;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:after {
+    display: none;
+  }
+}
