--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -20,14 +20,6 @@
       align-items: center;
     }
 
-    &-search {
-      padding: 0 20px 20px 20px;
-
-      input {
-        background-color: #f7f8f9;
-      }
-    }
-
     &-dialogs {
       height: calc(100% - 136px);
 
@@ -49,6 +41,14 @@
 
   &__dialog {
     flex: 1;
+    position: relative;
+
+    .ant-empty {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
 
     &-header {
       display: flex;
