--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -1,5 +1,9 @@
 .messages {
   height: 100%;
+  padding: 20px;
+  padding-bottom: 0;
+  overflow: auto;
+
   &--loading {
     display: flex;
     align-items: center;
