--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -24,6 +24,19 @@
     width: 70px;
     justify-content: space-between;
     margin-left: 15px;
+
+    &-upload-btn {
+      cursor: pointer;
+      input {
+        cursor: pointer;
+      }
+
+      &:hover {
+        button {
+          opacity: 1;
+        }
+      }
+    }
   }
 
   input {
