--- a/src/components/Dialogs/Dialogs.scss
+++ b/src/components/Dialogs/Dialogs.scss
@@ -16,6 +16,16 @@
     display: flex;
     margin-bottom: 20px;
 
+    &:hover {
+      background-color: #f3f7ff;
+    }
+
+    &--selected,
+    &--selected:hover {
+      background-color: #1890ff;
+      color: #fff !important;
+    }
+
     &-avatar {
       position: relative;
       flex: 0 0 40px;
@@ -51,20 +61,25 @@
       flex-direction: column;
       justify-content: center;
       flex: 1;
+
       &-top {
         display: flex;
+
         b {
           font-weight: 500;
           font-size: 14px;
           flex: 1;
           margin-bottom: 6px;
         }
+
         span {
           opacity: 0.4;
         }
       }
+
       &-bottom {
         position: relative;
+
         p {
           opacity: 0.7;
           text-overflow: ellipsis;
@@ -73,6 +88,7 @@
           height: 1.2em;
           white-space: nowrap;
         }
+
         &-count {
           position: absolute;
           right: 0;
@@ -90,6 +106,7 @@
           line-height: 17px;
           box-shadow: 0 0 0px 3px #fff;
         }
+
         .message__icon-readed {
           bottom: 0;
           left: auto;
