--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -8,12 +8,17 @@
     max-width: 440px;
     margin-bottom: 20px;
     position: relative;
+
+    &:hover {
+      #{$self}__icon-actions {
+        display: block;
+      }
+    }
   }
 
   &__avatar {
     display: flex;
     flex-direction: column-reverse;
-
     .avatar {
       border-radius: 50px;
       width: 33px;
@@ -27,9 +32,8 @@
 
   &__bubble {
     background: $blue;
-    box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.2);
+    box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.196733);
     border-radius: 12px 12px 12px 0px;
-    font-size: 14px;
     padding: 15px;
     margin-bottom: 8px;
   }
@@ -47,23 +51,63 @@
   &__attachments {
     display: flex;
     margin-bottom: 5px;
-    cursor: pointer;
+    order: 1;
     &-item {
+      $item: &;
       margin-right: 5px;
+      cursor: pointer;
+      position: relative;
+
       img {
         width: 45px;
         height: 45px;
+        border-radius: 8px;
+      }
+
+      &:hover {
+        #{$item}-overlay {
+          opacity: 1;
+        }
+      }
+
+      .anticon-eye {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+      }
+
+      &-overlay {
+        opacity: 0;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        transition: opacity 0.15s ease-in-out;
+        border-radius: 8px;
       }
     }
   }
 
-  &__icon-readed {
-    position: absolute;
-    bottom: 25px;
-    left: -25px;
+  &__icon {
+    &-readed {
+      position: absolute;
+      bottom: 22px;
+      left: -25px;
 
-    &--no {
-      left: -20px;
+      &--no {
+        left: -20px;
+      }
+    }
+    &-actions {
+      display: none;
+      transform: rotate(90deg);
+      position: absolute;
+      left: -31px;
+      top: -5px;
     }
   }
 
@@ -72,11 +116,17 @@
       display: none;
     }
     #{$self}__bubble {
+      width: 280px;
       position: relative;
       overflow: hidden;
-      width: 280px;
     }
     #{$self}__audio {
+      padding: 15px;
+      background-color: #3674ff;
+      border-radius: 12px 12px 0px 12px;
+      width: 250px;
+      overflow: hidden;
+      position: relative;
       &-info {
         display: flex;
         align-items: center;
@@ -85,6 +135,7 @@
       }
       &-btn {
         button {
+          display: flex;
           cursor: pointer;
           border: 0;
           width: 28px;
@@ -93,22 +144,24 @@
           background: #0f3997;
           img {
             height: 13px;
+            position: relative;
+            left: 1px;
           }
         }
       }
       &-duration {
-        color: white;
-        font-weight: bold;
+        color: #fff;
+        font-weight: 500;
         opacity: 0.5;
         font-size: 12px;
       }
       &-progress {
+        left: 0;
+        top: 0;
         position: absolute;
-        left: 0px;
-        top: 0px;
         background-color: #418fff;
         height: 100%;
-        transition: width 0.5s ease;
+        transition: width 0.3s ease;
       }
     }
   }
@@ -117,8 +170,12 @@
     display: flex;
     flex-direction: row-reverse;
 
+    .avatar {
+      margin-left: 13px;
+      margin-right: 0;
+    }
+
     #{$self}__content {
-      display: flex;
       margin-bottom: 15px;
       flex-direction: row-reverse;
     }
@@ -131,6 +188,8 @@
     }
 
     #{$self}__info {
+      display: flex;
+      align-items: center;
       text-align: right;
     }
 
@@ -139,6 +198,7 @@
       border: 1px solid #ececec;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.0220444);
       border-radius: 12px 12px 0px 12px;
+      order: 2;
       #{$self}__text {
         color: $black;
       }
